@@ -34,6 +34,7 @@
   - The Transfer capability is expanded to any arbitrary extension/queue. Partial
     fix for Elastix bug #419.
   As a side effect of the rewrite, may also fix Elastix bugs #879, #796, #414. 
+* Agent Information: fix division by zero on no connection time.
 * Campaigns In: new module to define campaigns for incoming calls 
 * Campaigns Out: include NoAnswer and Abandoned calls in CSV report too.
 * Agents: Do not leave newly created or modified agent without an ECCP password.
